config file change

--- a/mvc/tiplLoginsignup_Final/login_signup/Web.config
+++ b/mvc/tiplLoginsignup_Final/login_signup/Web.config
@@ -11,8 +11,8 @@
 	<connectionStrings>
 		<!--<add name="DB" connectionString="Data Source=
     ;Initial Catalog=RSSDB;Persist Security Info=True;User ID=sa;Password=d2kxw#789;Max Pool Size=1024;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />-->
-		<!--<add name="DB" connectionString="data source=localhost;initial catalog=tiplUser;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient"/>-->
-		<add name="DB" connectionString="data source=101.53.146.129;initial catalog=tipltrainee;user id=trainee;password=tipl#789;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient"/>
+		<add name="DB" connectionString="data source=localhost;initial catalog=tiplUser;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient"/>
+		
 	</connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
